force-app/main/default/objects/Opportunity/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Amount</label>
    <type>Checkbox</type>
</CustomField>