force-app/main/default/objects/Opportunity/fields/Pipedrive_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipedrive_Id__c</fullName>
    <externalId>true</externalId>
    <label>Pipedrive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>