force-app/main/default/objects/Opportunity/fields/Pipedrive_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pipedrive_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipedrive Owner</label>
    <referenceTo>Pipedrive_User__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>