force-app/main/default/objects/Opportunity/fields/Pipedrive_Person__c.field-meta.xml
<CustomField>
    <fullName>Pipedrive_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipedrive Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pipedrive Deals</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>